--- a/styles/main.css
+++ b/styles/main.css
@@ -304,6 +304,7 @@ body {
 .sidebar li:hover, .sidebar-web-page li:hover {
   background-color: #e2e2e2;
   color: black; }
+
 .jumbotron.jumbotron-fixed{
   background: url("../images/makanan.jpg");
   background-size: cover;
@@ -320,6 +321,7 @@ body {
   width: 100%;
   height: 240px;
 }
+/*kelas Baru */
 
 .content {
   padding-left: 17%;
@@ -328,6 +330,7 @@ body {
   background: white;
   height: 100vh; }
 
+/*tidak ada kelas web content*/ 
 .web-content {
   padding-left: 17%;
   padding-right: 35px;
@@ -414,6 +417,16 @@ span.status {
   text-align: center;
   font-size: 3rem;
   font-weight: bolder; }
+/*font-weight: bolder; di comment */
+
+/*di bawah panel heading di tambah kelas panel header*/ 
+/*.panel > .panel-header {
+  text-align: center;
+  font-size: 2.5rem;
+  background-color: #C5C8CB;
+  color: #505050;
+  padding: 10px;
+  border-radius: 3px }*/
 
 .panel > .form-group {
   padding-left: 30px; }
@@ -469,6 +482,7 @@ nav.navbar {
 
 .col-md-5 > .panel, .bold {
   font-weight: bold; }
+  /*comment font-weight:bold;*/
 
 .belum_verifikasi {
   color: orange; }
@@ -490,12 +504,16 @@ nav.navbar {
   margin-top: 30%;
   font-size: 1.5rem;
   font-weight: 600;
-  text-align: left; }
+  /*font-weight: 600; diganti menjadi 300*/
+  text-align: left; 
+  /*text-align: left; diganti menjadi  right*/}
 
 .total {
   font-size: 3rem;
   font-weight: 600;
-  text-align: left; }
+  /*font-weight: 600; diganti menjadi 200*/
+  text-align: left;
+  /*text-align: left; diganti menjadi  right*/ }
 
 .total-keseluruhan {
   margin-top: 5%;
@@ -607,6 +625,15 @@ span.saldo-bertambah {
   -webkit-box-shadow: 0 0 8px grey;
           box-shadow: 0 0 8px grey;
   padding-left: 10px; }
+
+  /*panel total diganti jadi 
+  .panel-total {
+  margin-top: 20px;
+  border-radius: 3px;
+/*  -webkit-box-shadow: 0 0 8px grey;
+          box-shadow: 0 0 8px grey;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+   }*/
 
 .bordered-box > .box {
   width: 60%; }
